; ModuleID = '/home/carl/AnghaBench/libgit2/examples/extr_common.c_match_int_arg.c'
source_filename = "/home/carl/AnghaBench/libgit2/examples/extr_common.c_match_int_arg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.args_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @match_int_arg(i32* %0, %struct.args_info* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.args_info*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store %struct.args_info* %1, %struct.args_info** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load %struct.args_info*, %struct.args_info** %7, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i8* @match_numeric_arg(%struct.args_info* %11, i8* %12)
  store i8* %13, i8** %10, align 8
  %14 = load i8*, i8** %10, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %23

17:                                               ; preds = %4
  %18 = load i32*, i32** %6, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i32, i32* %9, align 4
  %21 = load i8*, i8** %8, align 8
  %22 = call i32 @match_int_internal(i32* %18, i8* %19, i32 %20, i8* %21)
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %17, %16
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i8* @match_numeric_arg(%struct.args_info*, i8*) #1

declare dso_local i32 @match_int_internal(i32*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
